# find-duplicates

./: .gitignore  Cargo.toml  README.md  dups.txt  find-duplicates  find_duplicates.py  main.rs  rustfmt.toml
src/: file_id.rs  lib.rs  linked_group.rs  main.rs  metafile.rs  recursive_dir_reader.rs
src/metafile/: c_command.rs  file_id.rs  mod.rs
test/: one  yo-softlinked.txt
