[package]
name = "find-duplicates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["fs", "rt", "rt-multi-thread"] }
futures = "0.3.19"
adler32 = "1.2.0"


[[bin]]
name = "find-duplicates"
path = "main.rs"
